--- a/index.html
+++ b/index.html
@@ -14,11 +14,16 @@
 
   <div class="row min-vh-100 no-gutters">
     <header class="col-12 col-lg-3 bg-dark text-light sticky-top d-flex flex-column p-4 p-lg-3">
-      <h1 class="text-center">Taskmaster Pro Edition</h1>
-      <button id="create-task" class="btn btn-block btn-success" data-toggle="modal" data-target="#task-form-modal">
-        Add Task
-      </button>
-      <button id="remove-tasks" class="btn btn-block btn-danger">Delete All Tasks</button>
+      <div>
+        <h1 class="text-center"><span class="oi oi-task d-inline d-lg-none"></span>
+          Taskmaster Pro Edition</h1>
+          <div class="ml-md-auto w-100 w-md-auto">
+            <button id="create-task" class="btn btn-block btn-success" data-toggle="modal" data-target="#task-form-modal">
+              Add Task
+            </button>
+          </div>
+        <button id="remove-tasks" class="btn btn-block btn-danger">Delete All Tasks</button>
+      </div>
       <p class="mt-auto d-none d-lg-block">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi voluptas architecto ipsa
         excepturi aut non
         laudantium sequi fugit officiis optio deleniti asperiores rem eius laborum maxime blanditiis culpa, quis iste?
@@ -33,10 +38,6 @@
               To Do
             </h4>
             <ul id="list-toDo" class="list-group list-group-flush">
-              <li class="list-group-item">
-                <span class="badge badge-primary badge-pill"></span>
-                <p class="m-1"></p>
-              </li>
             </ul>
           </div>
         </div>
@@ -48,10 +49,6 @@
               In Progress
             </h4>
             <ul id="list-inProgress" class="list-group list-group-flush">
-              <li class="list-group-item">
-                <span class="badge badge-primary badge-pill"></span>
-                <p class="m-1"></p>
-              </li>
             </ul>
           </div>
         </div>
@@ -63,10 +60,6 @@
               In Review
             </h4>
             <ul id="list-inReview" class="list-group list-group-flush">
-              <li class="list-group-item">
-                <span class="badge badge-primary badge-pill"></span>
-                <p class="m-1"></p>
-              </li>
             </ul>
           </div>
         </div>
@@ -78,10 +71,6 @@
               Done
             </h4>
             <ul id="list-done" class="list-group list-group-flush">
-              <li class="list-group-item">
-                <span class="badge badge-primary badge-pill"></span>
-                <p class="m-1"></p>
-              </li>
             </ul>
           </div>
         </div>
